force-app/main/default/objects/Award__c/fields/Disbursed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Disbursed_Amount__c</fullName>
    <label>Disbursed Amount</label>
    <summarizedField>Disbursed_Funds__c.Payout_Amount__c</summarizedField>
    <summaryForeignKey>Disbursed_Funds__c.Award__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>