force-app/main/default/objects/Award__c/fields/Initial_Budget_Amount__c.field-meta.xml
<CustomField>
    <fullName>Initial_Budget_Amount__c</fullName>
    <label>Initial Budget Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>