force-app/main/default/objects/Award__c/fields/Money_Available__c.field-meta.xml
<CustomField>
    <fullName>Money_Available__c</fullName>
    <formula>Initial_Budget_Amount__c - Disbursed_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Remaining Budget from Initial - Paid Out</inlineHelpText>
    <label>Money Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>