force-app/main/default/objects/Award__c/fields/Service_Types__c.field-meta.xml
<CustomField>
    <fullName>Service_Types__c</fullName>
    <label>Service Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service_Types</valueSetName>
    </valueSet>
</CustomField>